--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <ul class="lista__botoes">
                 <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
                             id="logo__header">&nbsp;BECOME A PATREON</a></li>
-                <li><a href="#" class="container__botao">&ensp;&emsp;<img
-                            src="/assets/images/download_for_offline_FILL1_wght400_GRAD0_opsz48 1.png"
-                            id="logo__header"> DOWNLOAD&nbsp;&ensp;&emsp;&ensp;</a></li>
+                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
+                        class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
+                            id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
             </ul>
         </div>
     </header>
