--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
         </div>
         <div class="div__botoes">
             <ul class="lista__botoes">
-                <li><a href="#" class="container__botao"><img src="/siteCabaret/assets/images/5a5a 1.png"
+                <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
                             id="logo__header">&nbsp;BECOME A PATREON</a></li>
                 <li><a href="#" class="container__botao">&ensp;&emsp;<img
-                            src="/siteCabaret/assets/images/download_for_offline_FILL1_wght400_GRAD0_opsz48 1.png"
+                            src="/assets/images/download_for_offline_FILL1_wght400_GRAD0_opsz48 1.png"
                             id="logo__header"> DOWNLOAD&nbsp;&ensp;&emsp;&ensp;</a></li>
             </ul>
         </div>
