--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <nav class="nav__header">
         <img src="assets/images/Patreon___Profile_Image 1.png" alt="Estudio Logo" class="navLogo">
         <ul>
-            <li><a href="index.html">about</a></li>
-            <li><a href="#">news</a></li>
-            <li><a href="#">download</a></li>
+            <li><a href="#gallery">gallery</a></li>
+            <li><a href="#roadMap">road map</a></li>
+            <li><a href="#faq">faq</a></li>
             <li><a href="contact.html">contact us</a></li>
             <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
             <li><a href="#" target="_blank">patreon</a></li>
@@ -80,8 +80,8 @@
                 <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
                             id="logo__header">&nbsp;BECOME A PATREON</a></li>
                 <li><a href="#" class="container__botao">&ensp;&emsp;<img
-                            src="/assets/images/download_for_offline_FILL1_wght400_GRAD0_opsz48 1.png"
-                            id="logo__header"> DOWNLOAD&nbsp;&ensp;&emsp;&ensp;</a></li>
+                            src="/assets/images/"
+                            id="logo__header"> DISCORD&nbsp;&ensp;&emsp;&ensp;</a></li>
             </ul>
         </div>
     </header>
@@ -99,23 +99,17 @@
             </p>
         </div>
         <div class="div__features">
-            <h3>Features</h3>
+            <h3><a name="roadMap">Features</a></h3>
             <ul class="ul__features">
                 <li>&#9733; Versus Player</li>
                 <li>&#9733; Campaign Mode</li>
                 <li>&#9733; Customizable Character</li>
-                <li>&#9733; Burlesque</li>
-                <li>&#9733; Fetiche</li>
-                <li>&#9733; Striptease</li>
-                <li>&#9733; Win Contests</li>
-                <li>&#9733; Raise your career</li>
-                <li>&#9733; Enhance your skills</li>
             </ul>
         </div>
     </main>
 
     <section class="photos">
-        <div class="div__photos">
+        <div class="div__photos"><a name="gallery"></a>
             <ul class="ul__photos">
                 <li><img src="/assets/images/high/foto1.jpg" class="minifoto" id="minifoto1"
                         onclick="F_modal('/assets/images/high/foto1.jpg',1)"></li>
@@ -133,7 +127,7 @@
                         onclick="F_modal('/assets/images/high/foto11.jpg',7)"></li>
                 <li><img src="/assets/images/high/foto13.jpg" class="minifoto" id="minifoto8"
                         onclick="F_modal('/assets/images/high/foto13.jpg',8)"></li>
-        </div>
+        </div></a>
         <div id="janelaModal">
             <span id="btFecharModal">X</span>
             <span id="btpreviousModal">&#10094;</span>
@@ -144,7 +138,7 @@
 
     <section class="FAQ">
         <div class="div__faq">
-            <h3>FAQ</h3>
+            <h3><a name="faq">FAQ</a></h3>
             <ul class="ul__faq">
                 <li>
                     <p class="p__question">How long is the term of subscription?</p>
