--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,7 @@
     <nav class="nav__header">
         <img src="assets/images/Patreon___Profile_Image 1.png" alt="Estudio Logo" class="navLogo">
         <ul>
-            <li><a href="index.html">about</a></li>
-            <li><a href="#">news</a></li>
-            <li><a href="#">download</a></li>
-            <li><a href="contact.html">contact us</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
             <li><a href="#" target="_blank">patreon</a></li>
         </ul>
@@ -29,9 +26,9 @@
             <ul class="lista__botoes">
                 <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
                             id="logo__header">&nbsp;BECOME A PATREON</a></li>
-                <li><a href="#" class="container__botao">&ensp;&emsp;<img
-                            src="/assets/images/download_for_offline_FILL1_wght400_GRAD0_opsz48 1.png"
-                            id="logo__header"> DOWNLOAD&nbsp;&ensp;&emsp;&ensp;</a></li>
+                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
+                        class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
+                            id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
             </ul>
         </div>
     </header>
@@ -44,7 +41,8 @@
                     target="_blank">Discord</a>
                 server and ask in the community #dev-journal.<br><br>
 
-                If you have a question, make sure to check the <a href="index.html">FAQs</a> on the about page.<br><br>
+                If you have a question, make sure to check the <a href="index.html#faq">FAQs</a> on the about
+                page.<br><br>
 
                 If you wish to contact the dev team, send us an email at: <a
                     href="mailto:gustavo.visconti@consequencia.com">gustavo.visconti@consequencia.com</a>
