--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <main class="about">
         <div class="div__about">
-            <h2>About Cabaré Cariño</h2>
+            <h2>About Cabaret Cariño</h2>
             <p>
                 Cabaret Cariño is a unique adult striptease pageant game. Two girls on stage, using all their sensuality
                 and pole-dancing skills to mercilessly tease and entice the audience. Strippers, of all kinds and
@@ -106,6 +106,10 @@
                 <li>&#9733; Customizable Character</li>
             </ul>
         </div>
+        <div class="div__roadMap">
+            <img src="/assets/images/ESTUDO-Roadmap.png" alt="Road Map" id="roadMap">
+        </div>
+
     </main>
 
     <section class="photos">
