--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <div class="container">
     <nav class="nav__header">
-        <img src="assets/images/Patreon___Profile_Image 1.png" alt="Estudio Logo" class="navLogo">
+        <a name="home"><img src="assets/images/Header_bt.png" alt="Estudio Logo" class="navLogo"></a>
         <ul>
             <li><a href="#gallery">gallery</a></li>
             <li><a href="#roadMap">road map</a></li>
@@ -171,12 +171,12 @@
     <footer>
         <nav class="nav__footer">
             <ul>
-                <li><a href="#">about</a></li>
-                <li><a href="#">news</a></li>
-                <li><a href="#">download</a></li>
-                <li><a href="#">contact us</a></li>
-                <li><a href="#">discord</a></li>
-                <li><a href="#">patreon</a></li>
+                <li><a href="#home">home</a></li>
+                <li><a href="#gallery">gallery</a></li>
+                <li><a href="#roadMap">road map</a></li>
+                <li><a href="contact.html">contact us</a></li>
+                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
+                <li><a href="#" target="_blank">patreon</a></li>
             </ul>
         </nav>
     </footer>
