--- a/index.html
+++ b/index.html
@@ -1,184 +1,208 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <!--link rel="stylesheet" href="reset.css"-->
-    <link rel="stylesheet" href="style.css">
-    <title>Game Cabaret Cariño</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="UTF-8">
+        <!--link rel="stylesheet" href="reset.css"-->
+        <link rel="stylesheet" href="style.css">
+        <title>Game Cabaret Cariño</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script>
-        function F_modal(img, id) {
-            var modalJ = document.getElementById("janelaModal");
-            var modalI = document.getElementById("imgModal");
-            var modalBP = document.getElementById("btpreviousModal");
-            var modalBN = document.getElementById("btNextModal");
-            if (id > 1) {
-                var prevId = id - 1;
-                console.log(prevId);
-                var prevImg = `/assets/images/high/foto${prevId}.jpg`;
-                console.log(prevImg);
-            } else {
-                var prevId = 1
-                var prevImg = `/assets/images/high/foto1.jpg`;
-            }
-            if (id < 8) {
-                var nextId = id + 1;
-                console.log(nextId);
-                var nextImg = `/assets/images/high/foto${nextId}.jpg`;
-                console.log(nextImg);
-            } else {
-                var nextId = 8
-                var nextImg = '/assets/images/high/foto8.jpg';
-            }
-
-            modalJ.style.display = "block";
-            modalI.src = img;
-            modalI.onclick = function () {
-                modalJ.style.display = "none";
-            }
-            modalBP.onclick = function () {
-                modalBN.style.display = "block";
+        <script>
+            function F_modal(img, id) {
+                var modalJ = document.getElementById("janelaModal");
+                var modalI = document.getElementById("imgModal");
+                var modalBP = document.getElementById("btpreviousModal");
+                var modalBN = document.getElementById("btNextModal");
                 if (id > 1) {
-                    F_modal(prevImg, prevId);
+                    var prevId = id - 1;
+                    console.log(prevId);
+                    var prevImg = `/assets/images/high/foto${prevId}.jpg`;
+                    console.log(prevImg);
                 } else {
-                    modalBP.style.display = "none";
+                    var prevId = 1
+                    var prevImg = `/assets/images/high/foto1.jpg`;
                 }
-            }
-            modalBN.onclick = function () {
-                modalBP.style.display = "block";
                 if (id < 8) {
-                    F_modal(nextImg, nextId);
+                    var nextId = id + 1;
+                    console.log(nextId);
+                    var nextImg = `/assets/images/high/foto${nextId}.jpg`;
+                    console.log(nextImg);
                 } else {
-                    modalBN.style.display = "none";
+                    var nextId = 8
+                    var nextImg = '/assets/images/high/foto8.jpg';
+                }
+
+                modalJ.style.display = "block";
+                modalI.src = img;
+                modalI.onclick = function () {
+                    modalJ.style.display = "none";
+                }
+                modalBP.onclick = function () {
+                    modalBN.style.display = "block";
+                    if (id > 1) {
+                        F_modal(prevImg, prevId);
+                    } else {
+                        modalBP.style.display = "none";
+                    }
+                }
+                modalBN.onclick = function () {
+                    modalBP.style.display = "block";
+                    if (id < 8) {
+                        F_modal(nextImg, nextId);
+                    } else {
+                        modalBN.style.display = "none";
+                    }
                 }
             }
-        }
-    </script>
-</head>
+        </script>
+    </head>
 
-<div class="container">
-    <nav class="nav__header">
-        <a name="home"><img src="assets/images/Header_bt.png" alt="Estudio Logo" class="navLogo"></a>
-        <ul>
-            <li><a href="#gallery">gallery</a></li>
-            <li><a href="#roadMap">road map</a></li>
-            <li><a href="#faq">faq</a></li>
-            <li><a href="contact.html">contact us</a></li>
-            <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
-            <li><a href="#" target="_blank">patreon</a></li>
-        </ul>
-    </nav>
+    <body>
+        <div class="container">
+            <nav class="nav__header__pc">
+                <a name="home"><img src="assets/images/Header_bt.png" alt="Estudio Logo" class="navLogo"></a>
+                <ul>
+                    <li><a href="#gallery">gallery</a></li>
+                    <li><a href="#roadMap">road map</a></li>
+                    <li><a href="#faq">faq</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                    <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
+                    <li><a href="#" target="_blank">patreon</a></li>
+                </ul>
+            </nav>
 
-    <header class="banner">
-        <div class="div__logo">
-            <img src="assets/images/carinoLogos(comDropshadow).png" alt="Jogo Cabaré Cariño" class="mainLogo">
-        </div>
-        <div class="div__botoes">
-            <ul class="lista__botoes">
-                <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
-                            id="logo__header">&nbsp;BECOME A PATREON</a></li>
-                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
-                        class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
-                            id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
-            </ul>
-        </div>
-    </header>
+            <div class="nav__header__mobile">
+                <a name="home"><img src="assets/images/Header_bt.png" alt="Estudio Logo" class="navLogo"></a>
+                <input type="checkbox" id="check">
+                <label for="check" id="menuIcon">&#9776;</label>
+            </div>
 
-    <main class="about">
-        <div class="div__about">
-            <h2>About Cabaret Cariño</h2>
-            <p>
-                Cabaret Cariño is a unique adult striptease pageant game. Two girls on stage, using all their sensuality
-                and pole-dancing skills to mercilessly tease and entice the audience. Strippers, of all kinds and
-                styles, each one more delicious than the other: pinups, schoolgirls, dominatrixes, gamers, burlesque…
-                the choice is yours.
-                Win contests, rise in your career, and make your path to compete in the mythical, erotic, inviting – and
-                irresistible –  Cabaret Cariño!
-            </p>
-        </div>
-        <div class="div__features">
-            <h3><a name="roadMap">Features</a></h3>
-            <ul class="ul__features">
-                <li>&#9733; Versus Player</li>
-                <li>&#9733; Campaign Mode</li>
-                <li>&#9733; Customizable Character</li>
-            </ul>
-        </div>
-        <div class="div__roadMap">
-            <img src="/assets/images/ESTUDO-Roadmap.png" alt="Road Map" id="roadMap">
-        </div>
+            <div class="barra">
+                <nav class="nav__barra">
+                    <a href="#gallery"><div class="menuLink">gallery</div></a>
+                    <a href="#roadMap"><div class="menuLink">road map</div></a>
+                    <a href="#faq"><div class="menuLink">faq</div></a>
+                    <a href="contact.html"><div class="menuLink">contact us</div></a>
+                    <a href="https://discord.gg/BSPsfaabUe" target="_blank"><div class="menuLink">discord</div></a>
+                    <a href="#" target="_blank"><div class="menuLink">patreon</div></a>
+                </nav>
+            </div>
+            
+            <header class="banner">
+                <div class="div__logo">
+                    <img src="assets/images/carinoLogos(comDropshadow).png" alt="Jogo Cabaré Cariño" class="mainLogo">
+                </div>
+                <div class="div__botoes">
+                    <ul class="lista__botoes">
+                        <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
+                                    id="logo__header">&nbsp;BECOME A PATREON</a></li>
+                        <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
+                                class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
+                                    id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
+                    </ul>
+                </div>
+            </header>
 
-    </main>
-
-    <section class="photos">
-        <div class="div__photos"><a name="gallery"></a>
-            <ul class="ul__photos">
-                <li><img src="/assets/images/high/foto1.jpg" class="minifoto" id="minifoto1"
-                        onclick="F_modal('/assets/images/high/foto1.jpg',1)"></li>
-                <li><img src="/assets/images/high/foto2.jpg" class="minifoto" id="minifoto2"
-                        onclick="F_modal('/assets/images/high/foto2.jpg',2)"></li>
-                <li><img src="/assets/images/high/foto3.jpg" class="minifoto" id="minifoto3"
-                        onclick="F_modal('/assets/images/high/foto3.jpg',3)"></li>
-                <li><img src="/assets/images/high/foto4.jpg" class="minifoto" id="minifoto4"
-                        onclick="F_modal('/assets/images/high/foto4.jpg',4)"></li>
-                <li><img src="/assets/images/high/foto6.jpg" class="minifoto" id="minifoto5"
-                        onclick="F_modal('/assets/images/high/foto6.jpg',5)"></li>
-                <li><img src="/assets/images/high/foto7.jpg" class="minifoto" id="minifoto6"
-                        onclick="F_modal('/assets/images/high/foto7.jpg',6)"></li>
-                <li><img src="/assets/images/high/foto11.jpg" class="minifoto" id="minifoto7"
-                        onclick="F_modal('/assets/images/high/foto11.jpg',7)"></li>
-                <li><img src="/assets/images/high/foto13.jpg" class="minifoto" id="minifoto8"
-                        onclick="F_modal('/assets/images/high/foto13.jpg',8)"></li>
-        </div></a>
-        <div id="janelaModal">
-            <span id="btFecharModal">X</span>
-            <span id="btpreviousModal">&#10094;</span>
-            <span id="btNextModal">&#10095;</span>
-            <img id="imgModal">
-        </div>
-    </section>
-
-    <section class="FAQ">
-        <div class="div__faq">
-            <h3><a name="faq">FAQ</a></h3>
-            <ul class="ul__faq">
-                <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+            <main class="about">
+                <div class="div__about">
+                    <h2>About Cabaret Cariño</h2>
+                    <p>
+                        Cabaret Cariño is a unique adult striptease pageant game. Two girls on stage, using all their sensuality
+                        and pole-dancing skills to mercilessly tease and entice the audience. Strippers, of all kinds and
+                        styles, each one more delicious than the other: pinups, schoolgirls, dominatrixes, gamers, burlesque…
+                        the choice is yours.
+                        Win contests, rise in your career, and make your path to compete in the mythical, erotic, inviting – and
+                        irresistible –  Cabaret Cariño!
                     </p>
-                </li>
-                <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
-                    </p>
-                </li>
-                <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
-                    </p>
-                </li>
-                <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
-                    </p>
-                </li>
-            </ul>
+                </div>
+                <div class="div__features">
+                    <h3><a name="roadMap">Features</a></h3>
+                    <ul class="ul__features">
+                        <li>&#1645; Versus Player</li>
+                        <li>&#1645; Campaign Mode</li>
+                        <li>&#1645; Customizable Character</li>
+                    </ul>
+                </div>
+                <div class="div__roadMap">
+                    <img src="/assets/images/ESTUDO-Roadmap.png" alt="Road Map" id="roadMap">
+                </div>
+
+            </main>
+
+            <section class="photos">
+                <div class="div__photos"><a name="gallery"></a>
+                    <ul class="ul__photos">
+                        <li><img src="/assets/images/high/foto1.jpg" class="minifoto" id="minifoto1"
+                                onclick="F_modal('/assets/images/high/foto1.jpg',1)"></li>
+                        <li><img src="/assets/images/high/foto2.jpg" class="minifoto" id="minifoto2"
+                                onclick="F_modal('/assets/images/high/foto2.jpg',2)"></li>
+                        <li><img src="/assets/images/high/foto3.jpg" class="minifoto" id="minifoto3"
+                                onclick="F_modal('/assets/images/high/foto3.jpg',3)"></li>
+                        <li><img src="/assets/images/high/foto4.jpg" class="minifoto" id="minifoto4"
+                                onclick="F_modal('/assets/images/high/foto4.jpg',4)"></li>
+                        <li><img src="/assets/images/high/foto6.jpg" class="minifoto" id="minifoto5"
+                                onclick="F_modal('/assets/images/high/foto6.jpg',5)"></li>
+                        <li><img src="/assets/images/high/foto7.jpg" class="minifoto" id="minifoto6"
+                                onclick="F_modal('/assets/images/high/foto7.jpg',6)"></li>
+                        <li><img src="/assets/images/high/foto11.jpg" class="minifoto" id="minifoto7"
+                                onclick="F_modal('/assets/images/high/foto11.jpg',7)"></li>
+                        <li><img src="/assets/images/high/foto13.jpg" class="minifoto" id="minifoto8"
+                                onclick="F_modal('/assets/images/high/foto13.jpg',8)"></li>
+                </div></a>
+                <div id="janelaModal">
+                    <span id="btFecharModal">X</span>
+                    <span id="btpreviousModal">&#10094;</span>
+                    <span id="btNextModal">&#10095;</span>
+                    <img id="imgModal">
+                </div>
+            </section>
+
+            <section class="FAQ">
+                <div class="div__faq">
+                    <h3><a name="faq">FAQ</a></h3>
+                    <ul class="ul__faq">
+                        <li>
+                            <p class="p__question">How long is the term of subscription?</p>
+                            <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                            </p>
+                        </li>
+                        <li>
+                            <p class="p__question">How long is the term of subscription?</p>
+                            <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                            </p>
+                        </li>
+                        <li>
+                            <p class="p__question">How long is the term of subscription?</p>
+                            <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                            </p>
+                        </li>
+                        <li>
+                            <p class="p__question">How long is the term of subscription?</p>
+                            <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <footer>
+                <nav class="nav__footer">
+                    <ul>
+                        <li><a href="#home">home</a></li>
+                        <li><a href="#gallery">gallery</a></li>
+                        <li><a href="#roadMap">road map</a></li>
+                        <li><a href="contact.html">contact us</a></li>
+                        <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
+                        <li><a href="#" target="_blank">patreon</a></li>
+                    </ul>
+                </nav>
+            </footer>
+
         </div>
-    </section>
+    </body>
+</html>
 
-    <footer>
-        <nav class="nav__footer">
-            <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#gallery">gallery</a></li>
-                <li><a href="#roadMap">road map</a></li>
-                <li><a href="contact.html">contact us</a></li>
-                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
-                <li><a href="#" target="_blank">patreon</a></li>
-            </ul>
-        </nav>
-    </footer>
 
-</div>
+
+
