Pre-Launch - falta roadMap

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     </header>
 
     <main class="about">
+        <div class="div__video">
+            <video autoplay muted loop id="video">
+            <source src="/assets/videos/WhatsApp Video 2023-01-16 at 23.50.26.mp4" type="video/mp4">
+        </div>
         <div class="div__about">
             <h2>About Cabaret Cariño</h2>
             <p>
@@ -101,9 +105,9 @@
         <div class="div__features">
             <h3><a name="roadMap">Features</a></h3>
             <ul class="ul__features">
-                <li>&#9733; Versus Player</li>
-                <li>&#9733; Campaign Mode</li>
-                <li>&#9733; Customizable Character</li>
+                <li>&#10059; Versus Player</li>
+                <li>&#10059; Campaign Mode</li>
+                <li>&#10059; Customizable Character</li>
             </ul>
         </div>
         <div class="div__roadMap">
@@ -145,23 +149,30 @@
             <h3><a name="faq">FAQ</a></h3>
             <ul class="ul__faq">
                 <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                    <p class="p__question">How often is Cabaret Cariño updated?</p>
+                    <p class="p__answer">Our game is updated twice a month, and the updates are released on Patreon on
+                        the first and third Wednesdays of every month.
                     </p>
                 </li>
                 <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                    <p class="p__question">What kind of content is planned for the next updates?</p>
+                    <p class="p__answer">The project's roadmap has the main milestones listed for the next few months,
+                        while more detailed news and updates are shared in our Discord and Patreon posts.
                     </p>
                 </li>
                 <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                    <p class="p__question">How is the content for future updates decided?</p>
+                    <p class="p__answer">We have a strong vision of what the game should look like in the future, but we
+                        also take great care to listen to members of the community and implement features we feel are
+                        important to them. If you want to send a suggestion or feedback, join our Discord. We'll be
+                        happy to hear your thoughts.
                     </p>
                 </li>
                 <li>
-                    <p class="p__question">How long is the term of subscription?</p>
-                    <p class="p__answer">When you pay for the patreon support, you get a 1 mounth free to use benefit.
+                    <p class="p__question">Where can I report a bug?</p>
+                    <p class="p__answer">Our Discord has a special channel where you can report any issues you encounter
+                        with the game, so feel free to share screenshots and a description of any problem you find
+                        during gameplay.
                     </p>
                 </li>
             </ul>
