--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li><a href="#faq">faq</a></li>
             <li><a href="contact.html">contact us</a></li>
             <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
-            <li><a href="#" target="_blank">patreon</a></li>
+            <li><a href="https://www.patreon.com/cabaretcarino" target="_blank">patreon</a></li>
         </ul>
     </nav>
 
@@ -87,8 +87,8 @@
         </div>
         <div class="div__botoes">
             <ul class="lista__botoes">
-                <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
-                            id="logo__header">&nbsp;BECOME A PATREON</a></li>
+                <li><a href="https://www.patreon.com/cabaretcarino" target="_blank" class="container__botao"><img
+                            src="/assets/images/5a5a 1.png" id="logo__header">&nbsp;BECOME A PATREON</a></li>
                 <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
                         class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
                             id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
@@ -98,8 +98,8 @@
 
     <main class="about">
         <div class="div__video">
-            <video autoplay loop id="video">
-                <source src="/assets/videos/CC_video2.mp4" type="video/mp4">
+            <video controls autoplay loop id="video">
+                <source src="/assets/videos/T1_Short4.webm" type="video/webm">
             </video>
         </div>
 
@@ -130,7 +130,7 @@
             </ul>
         </div>
         <div class="div__roadMap">
-            <img src="/assets/images/ESTUDO-Roadmap.png" alt="Road Map" id="roadMap">
+            <img src="/assets/images/Roadmap_01.jpeg" alt="Road Map" id="roadMap">
         </div>
 
     </main>
@@ -206,7 +206,7 @@
                 <li><a href="#roadMap">road map</a></li>
                 <li><a href="contact.html">contact us</a></li>
                 <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
-                <li><a href="#" target="_blank">patreon</a></li>
+                <li><a href="https://www.patreon.com/cabaretcarino" target="_blank">patreon</a></li>
             </ul>
         </nav>
     </footer>
