--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,12 @@
 
 <div class="container">
     <nav class="nav__header">
-        <img src="assets/images/Patreon___Profile_Image 1.png" alt="Estudio Logo" class="navLogo">
+        <a href="index.html"><img src="assets/images/Patreon___Profile_Image 1.png" alt="Estudio Logo"
+                class="navLogo"></a>
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
-            <li><a href="#" target="_blank">patreon</a></li>
+            <li><a href="https://www.patreon.com/cabaretcarino" target="_blank">patreon</a></li>
         </ul>
     </nav>
 
@@ -24,8 +25,8 @@
         </div>
         <div class="div__botoes">
             <ul class="lista__botoes">
-                <li><a href="#" class="container__botao"><img src="/assets/images/5a5a 1.png"
-                            id="logo__header">&nbsp;BECOME A PATREON</a></li>
+                <li><a href="https://www.patreon.com/cabaretcarino" target="_blank" class="container__botao"><img
+                            src="/assets/images/5a5a 1.png" id="logo__header">&nbsp;BECOME A PATREON</a></li>
                 <li><a href="https://discord.gg/BSPsfaabUe" target="_blank"
                         class="container__botao">&ensp;&ensp;&ensp;&emsp;<img src="/assets/images/discord logo.png"
                             id="logo__header"> DISCORD&ensp;&emsp;&emsp;&ensp;</a></li>
@@ -45,7 +46,7 @@
                 page.<br><br>
 
                 If you wish to contact the dev team, send us an email at: <a
-                    href="mailto:gustavo.visconti@consequencia.com">gustavo.visconti@consequencia.com</a>
+                    href="mailto:contact@cabaretcarino.com">contact@cabaretcarino.com</a>
             </p>
         </div>
     </main>
@@ -53,12 +54,9 @@
     <footer>
         <nav class="nav__footer">
             <ul>
-                <li><a href="#">about</a></li>
-                <li><a href="#">news</a></li>
-                <li><a href="#">download</a></li>
-                <li><a href="#">contact us</a></li>
-                <li><a href="#">discord</a></li>
-                <li><a href="#">patreon</a></li>
+                <li><a href="/index.html">home</a></li>
+                <li><a href="https://discord.gg/BSPsfaabUe" target="_blank">discord</a></li>
+                <li><a href="https://www.patreon.com/cabaretcarino" target="_blank">patreon</a></li>
             </ul>
         </nav>
     </footer>
